Added MPC with prod values
